[package]
name = "curve"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.22.0"
bincode = "1.3.3"
chrono = "0.4.38"
thiserror = "2.0.5"
indicatif = "0.17.8"
arrayref = "0.3.9"
clap = { version = "4.5.21", features = ["derive"] }
clap_derive = "4.5.18"
arrayvec = "0.7.6"
blake3 = "1.5.5"
chacha20poly1305 = "0.10.1"
zeroize = "1.8.1"
plotters = "0.3.7"
env_logger = "0.11.5"
log = "0.4.22"
